--- a/.mplayer/config
+++ b/.mplayer/config
@@ -1,7 +1,7 @@
 # ~/.mplayer/config
 
 dvd-device=/dev/cdrom
-ao=pulse
+ao=alsa
 stop-xscreensaver=yes
 # don't set cache -- it seems like it makes mplayer stutter
 #cache=1024
