--- a/.mplayer/config
+++ b/.mplayer/config
@@ -22,7 +22,7 @@ af=scaletempo
 #########################################################################
 # Video options
 
-vo=xv,x11,
+vo=vdpau,xvmc,xv,x11,
 #double="yes"
 
 # Allow sofware scaling if you use x11 for vo from the commandline
