--- a/.mplayer/config
+++ b/.mplayer/config
@@ -9,10 +9,8 @@ nolirc="1"
 fs=1
 stop-xscreensaver=1
 
+# Filter to make voices sound normal on higher playback speeds
 af=scaletempo
-# don't set cache -- it seems like it makes mplayer stutter
-#cache=1024
-#cache=8092
 
 # simulate user activity every 30 seconds
 #heartbeat-cmd="xscreensaver-command -deactivate"
@@ -23,7 +21,6 @@ af=scaletempo
 # Video options
 
 vo=vdpau,xvmc,xv,x11,
-#double="yes"
 
 # Allow sofware scaling if you use x11 for vo from the commandline
 zoom="1"
@@ -41,3 +38,7 @@ subfont-osd-scale=6
 # 1 Load all subs containing movie name.
 # 2 Load all subs in the current directory.
 sub-fuzziness=2
+
+# libass
+ass=1
+ass-font-scale=1.7
